--- a/src/main/resources/resources/light.less
+++ b/src/main/resources/resources/light.less
@@ -622,9 +622,11 @@ body label > input[type="radio"]:hover + i:after{
 
 body .select_radio label > input[type="radio"]:checked + i:after,
 body label > input[type="radio"]:checked + i:after {
-    background-color: @formElementColor;
-    border-color: @formElementColor;
-    box-shadow: 0 0 0 0.2rem transparent;
+    content: "" !important;
+    font: 0/0 a !important;
+    background-color: #fff !important;
+    border: 2px solid @formElementColor !important;
+    box-shadow: inset 0 0 0 4px @formElementColor !important;
 }
 
 body .select_checkbox label > [type="checkbox"]:checked + i:after,
